--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Font Awesome Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
     <!-- CSS Link -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section class="sidebar">
@@ -80,6 +80,6 @@
         <p>Content Section</p>
     </section>
     <!-- JS Link -->
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
